force-app/main/default/objects/Contact/fields/ActiveCamp__Account_Relation_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Account_Relation_Sync_Status__c</fullName>
    <description>ActiveCampaign Account Relation Sync Status</description>
    <label>Account Relation Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successfully Synced</fullName>
            </value>
            <value>
                <fullName>Waiting For Next Sync</fullName>
            </value>
            <value>
                <fullName>Waiting For Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>