force-app/main/default/objects/Contact/fields/ActiveCamp__ActiveCampaign_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__ActiveCampaign_Sync_Status__c</fullName>
    <label>ActiveCampaign Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting For Next Sync</fullName>
            </value>
            <value>
                <fullName>Successfully Synced</fullName>
            </value>
            <value>
                <fullName>Duplicate Email Found Do Not Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>