force-app/main/default/objects/Contact/fields/CC_Named_List__c.field-meta.xml
<CustomField>
    <fullName>CC_Named_List__c</fullName>
    <description>Clouder Consulting: Custom Field to bring the account value of picklist Named List. 
This field must be hidden from page layout and will be used by marketing team to build list.</description>
    <formula>Text(Account.Named_List__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Named List</label>
    <type>Text</type>
</CustomField>