force-app/main/default/objects/Contact/fields/CC_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>CC_Preferred_Language__c</fullName>
    <description>Custom field to select the contact preferred language. If the contact is created from lead conversion, this field is mapped from lead information.</description>
    <inlineHelpText>Select the Contact&apos;s preferred language for marketing communications.</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Language</valueSetName>
    </valueSet>
</CustomField>