force-app/main/default/objects/Contact/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <label>Contact Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Alemania</fullName>
            </value>
            <value>
                <fullName>Almacenes de Depósito (Panamá)</fullName>
            </value>
            <value>
                <fullName>Arabia Saudita</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Bélgica</fullName>
            </value>
            <value>
                <fullName>Belice</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Camboya</fullName>
            </value>
            <value>
                <fullName>Canadá</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>China (Continental)</fullName>
            </value>
            <value>
                <fullName>China-Taiwán (Formosa)</fullName>
            </value>
            <value>
                <fullName>Chipre</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Corea del Sur</fullName>
            </value>
            <value>
                <fullName>Costa de Marfil</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Croacia</fullName>
            </value>
            <value>
                <fullName>Cuba</fullName>
            </value>
            <value>
                <fullName>Curazao</fullName>
            </value>
            <value>
                <fullName>Dinamarca</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>Egipto, República Árabe de</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>