force-app/main/default/objects/Contact/fields/Email_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Email_Unsubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field indicates whether the contact has opted out of receiving emails. When the contact unsubscribes, this field is automatically marked as true.</description>
    <inlineHelpText>Indicates whether the contact has unsubscribed from email communications through ActiveCampaign. When checked, it means the contact will no longer receive email notifications and marketing messages from ActiveCampaign.</inlineHelpText>
    <label>Email Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>