force-app/main/default/objects/Contact/fields/Headquarters_Phone__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Phone__c</fullName>
    <label>Headquarters Phone</label>
    <type>Phone</type>
</CustomField>