force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a contact has been deemed inactive by a representative.</description>
    <inlineHelpText>Checked when a contact has been deemed inactive by a representative.</inlineHelpText>
    <label>Inactive?</label>
    <type>Checkbox</type>
</CustomField>