force-app/main/default/objects/Contact/fields/Individual_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Individual_Objectives__c</fullName>
    <label>Individual Objectives</label>
    <type>TextArea</type>
</CustomField>