force-app/main/default/objects/Contact/fields/NPS_required__c.field-meta.xml
<CustomField>
    <fullName>NPS_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the system and users to confirm if whether the contact is suitable for email campaigns</description>
    <inlineHelpText>Allows the system and users to confirm if whether the contact is suitable for email campaigns</inlineHelpText>
    <label>Email campaigns</label>
    <type>Checkbox</type>
</CustomField>