force-app/main/default/objects/Contact/fields/Obj_Set_Met__c.field-meta.xml
<CustomField>
    <fullName>Obj_Set_Met__c</fullName>
    <label>Obj Set / Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>