force-app/main/default/objects/Contact/fields/Supplemental_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Email__c</fullName>
    <label>Supplemental Email</label>
    <type>Email</type>
</CustomField>