force-app/main/default/objects/Contact/listViews/Actual_Clients.listView-meta.xml
<ListView>
    <fullName>Actual_Clients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Contact_Role__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Linkedin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Installed base contacts</label>
</ListView>