force-app/main/default/objects/Contact/listViews/All_contacts_with_good_status.listView-meta.xml
<ListView>
    <fullName>All_contacts_with_good_status</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>NPS_required__c</columns>
    <columns>Contact_Role__c</columns>
    <columns>Relationship__c</columns>
    <columns>Perception__c</columns>
    <columns>Interaction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All contacts with good status</label>
</ListView>