force-app/main/default/objects/Contact/listViews/All_Contacts_with_Roles.listView-meta.xml
<ListView>
    <fullName>All_Contacts_with_Roles</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>NPS_required__c</columns>
    <columns>Contact_Role__c</columns>
    <columns>Relationship__c</columns>
    <columns>Perception__c</columns>
    <columns>Interaction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Role__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Contacts with Roles</label>
</ListView>