force-app/main/default/objects/Contact/listViews/Barb.listView-meta.xml
<ListView>
    <fullName>Barb</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>barbara</value>
    </filters>
    <label>Barb</label>
</ListView>