force-app/main/default/objects/Contact/listViews/Contactos_CX_V2.listView-meta.xml
<ListView>
    <fullName>Contactos_CX_V2</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.ADDRESS1_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los contactos</label>
</ListView>