force-app/main/default/objects/Contact/listViews/NPS_Required_contacts.listView-meta.xml
<ListView>
    <fullName>NPS_Required_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>NPS_required__c</columns>
    <columns>Contact_Role__c</columns>
    <columns>Relationship__c</columns>
    <columns>Perception__c</columns>
    <columns>Interaction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NPS_required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NPS Required contacts</label>
</ListView>